# SONORUM.IA

./: .gitignore  MELHORIAS_DETECCAO.md  PREDICAO_TRASTES.md  README.md  calc_axis.py  collect_data.py  data.yaml  draw_boxes.py  index.html  main.py  package-lock.json  pyproject.toml  requirements.txt  t_webcam2.py  test_composto.py  test_simples.py  test_webcam.py  training.py  webcam1.py  webcam2.py
IA/: IA-EXEMPLo.py
data/cache/: chords.json
datasets/labels/: train.cache  val.cache
datasets/labels/val/: WIN_20250909_16_12_13_Pro.txt
identificador_de_acordes/: mic.py
identificador_de_acordes/audio/: audio_input.py  audio_processor.py
identificador_de_acordes/comparison/: chord_matcher.py  reference_data.py  threshold_definer.py
identificador_de_acordes/main/: main_app.py
identificador_de_acordes/src/comparison/: reference_data.py
runs/pose/train/: args.yaml  results.csv
runs/segment/train/: args.yaml  results.csv
src/: App.tsx  __init__.py  main.py
src/components/: CameraFeed.tsx  NotesPanel.tsx
src/modules/: __init__.py  calc_axis.py  draw_boxes.py  predict_frets_positions.py
tests/: IA-EXEMPLo.py  test.py  test_casas.py  test_cordas.py  test_simples.py
