[project]
name = "identificador-de-acordes"
version = "0.1.0"
description = ""
authors = [
    {name = "lucas-carva",email = "lucasverissimo93@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "librosa (>=0.11.0,<0.12.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "numpy (==2)",
    "sounddevice (>=0.5.2,<0.6.0)",
    "matplotlib (>=3.10.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
