[project]
name = "yolo-guitar"
version = "0.1.0"
description = ""
authors = [
    {name = "0pmm",email = "pmodestomarchiotto@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ultralytics (>=8.3.192,<9.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)"
]

[tool.poetry]
packages = [{include = "yolo_guitar", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
